rflood/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rflood
  namespace: rflood
spec:
  type: NodePort
  selector:
    app: rflood
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
